feat: Support use SecureRandom as default
1. Can use `SecureRandom` as default random instance by setting property `libcommon.util.random.useSecureRandom` to true (the default is false)
2. Skip `useThreadLocal` option when current thread is virtual